--- a/audit/src/main/resources/application.properties
+++ b/audit/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=audit
 spring.data.mongodb.uri=mongodb+srv://johanquimbayo:gNPj8xpV33es@sofka-u-bank-reactive.gois7.mongodb.net
 spring.data.mongodb.database=sofka-U-Bank-reactive-db
-spring.data.mongodb.auto-index-creation=true
+
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
