--- a/audit/build.gradle
+++ b/audit/build.gradle
@@ -26,14 +26,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
-
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.3'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
